--- a/Resources/Books/books.html
+++ b/Resources/Books/books.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>books</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "../style.css">
   </head>
   <body>
     <h1>Books</h1>
-    
+
       <div id ="nonfiction">
           <header>Nonfiction</header>
           <ul>
