--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </body>
 <div class="links">
-    <h3>• <a href="talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="">Resources</a> •</h3>
+    <h3>• <a href="Talk/talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="Resources/resources.html">Resources</a> •</h3>
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="styleshett" hreff="style.css" >
   </div>
