--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -14,6 +14,6 @@
         <li><a href = "">Cultural Appropriation Survey</a></li>
         <li><a href = "books/books.html">Books</a></li>
         <li><a href = "Website/website.html">Websites</a></li>
-        <li><a href = "MoviesBooks/moviesbooks.html">Movies/TV Shows</a></li>
+        <li><a href = "MoviesTV/moviestv.html">Movies/TV Shows</a></li>
   </body>
 </html>
