--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="animation.js"></script>
   </head>
 
   <body onload="myMove()">
     <div>
-      <div id= "title">
-        <h1>WOKE UP.</h1>
-      </div>
+        <h1 id= "title">WOKE UP.</h1>
       <div class="guidelines">
           <h2>Community guidelines</h2>
           <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
@@ -20,15 +19,11 @@
       </div>
 
       <div class="links">
-        <h3>• <a href="talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="">Resources</a> •</h3>
+        <h3>• <a href="Talk/talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="Resources/resources.html">Resources</a> •</h3>
       </div>
     </div>
     <script src="animation.js"></script>
   </body>
-<div class="links">
-    <h3>• <a href="Talk/talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="Resources/resources.html">Resources</a> •</h3>
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <link rel="styleshett" href="style.css" >
-  </div>
+
 
 </html>
