--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="animation.js"></script>
   </head>
 
   <body onload="myMove()">
-    <div>
-        <h1 id= "title">WOKE UP.</h1>
-      <div class="guidelines">
-          <h2>Community guidelines</h2>
-          <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-          <link rel="styleshett" href="style.css">
-          <p>Be respectful. Rude, insensitive, or irrelevant comments will be deleted. This is an open space where discussion is encouraged. Enjoy!</p>
-      </div>
+    <div id="title">
+        <h1>WOKE UP.</h1>
 
-      <div class="links">
-        <h3>• <a href="Talk/talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="Resources/resources.html">Resources</a> •</h3>
-      </div>
+    <div class="w3-container w3-center w3-animate-bottom w3-animate-opacity">
+          <h2>Community guidelines</h2>
+          <p>Be respectful. Rude, insensitive, or irrelevant comments will be deleted. This is an open space where discussion is encouraged. Enjoy!</p>
     </div>
+
+    <div class="Links">
+        <h3>• <a href="Talk/talk.html">Talk</a> • <a href = "vent.html">Vent</a> • <a href = "advice.html">Advice</a> • <a href="resources.html">Resources</a> •</h3>
+      </div>
+          </div>
     <script src="animation.js"></script>
   </body>
 
