--- a/resources.html
+++ b/resources.html
@@ -11,9 +11,9 @@
     <p>Welcome to our resources page!</p>
     <div id="resources-navbar">
       <ul>
-        <li><a href = "">Cultural Appropriation Survey</a></li>
-        <li><a href = "books/books.html">Books</a></li>
-        <li><a href = "Website/website.html">Websites</a></li>
-        <li><a href = "MoviesTV/moviestv.html">Movies/TV Shows</a></li>
+        <li><a href ="survey.html">Cultural Appropriation Survey</a></li>
+        <li><a href = "books.html">Books</a></li>
+        <li><a href = "website.html">Websites</a></li>
+        <li><a href = "moviestv.html">Movies/TV Shows</a></li>
   </body>
 </html>
