--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display">
+
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-users,.fa-users {font-size:200px}
+h1 {font family: "Sedgwick Ave Display", sans-serif}
+body,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
 </style>
 <body>
 
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2 w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i ></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Talk</a>
     <a href= "vent.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Vent</a>
@@ -35,26 +36,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-orange w3-center" style="padding:128px 16px">
+<header class="w3-container w3-indigo w3-center" style= "height:100vh; padding:128px 50px;">
   <h1 class="w3-margin w3-jumbo">WOKE UP</h1>
-  <p class="w3-xlarge">Community Guidelines</p>
-    <p class="w3-xlarge">Be respectful. Rude, insensitive, or irrelevant comments will be deleted. This is an open space where discussion is encouraged. Enjoy!</p>
 </header>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>What Are We About?</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h2>What Is Woke Up?</h2>
+      <h5 class="w3-padding-32">Woke Up is a platform for teenagers and young adults to have discussions about social issues.
+Topics addressed include cultural appropriation, racism, gender inequality, etc. We will not tolerate irrelevant or hateful comments and posts. If disagreements arise, you are encouraged to voice your opinion, as long as you do so respectfully. We hope you enjoy. Stay Woke!</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">We support discussions regarding relevant topics with posts and want to be able to educate our generation about different kinds of conversations that allow respect and acceptance. There are different resources available that are directed to other issues such as the vent section and a cultural appropriation survey. Vent is a platform that allows you to publicly post problems and situations that might be troubling you. The post will automatically delete within 48 hours and is anonymous. This is aimed to help those relieve their stress by having an outlet to release anything that is bothering them without having to worry about it coming back or having their name traced. More information is found on the individual page. Our cultural appropriation survey is an informative survey that takes gender and race and gives examples of culture being appropriated and an explanation on the background. Our resources also include websites that we believe are helpful, books, movies and TV shows we enjoy and wish to share with you! Thank you so much for visiting, enjoy Woke Up!
+</p>
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-users w3-padding-64 w3-text-orange"></i>
+      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
     </div>
   </div>
 </div>
@@ -63,23 +62,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-users w3-padding-64 w3-text-red w3-margin-right"></i>
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
     <div class="w3-twothird">
-      <h1>About Us</h1>
-      <h5 class="w3-padding-32">Girls Who Code</h5>
+      <h2>Meet the Team!</h2>
+      <h5 class="w3-padding-32">Woke Up is founded by four girls who are passionate about educating their generation about social issues. They hope this platform will benefit their society and help young adults eventually become comfortable discussing and bringing awareness to these topics in public.</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">
+        Cameron <br>
+        Claire <br>
+        Elaine hopes that Woke Up will allow an outlet for teenagers to share their opinions and become more aware and accepting of other’s opinions as well. She wants teenagers to have discussions without being afraid of backlash. She thanks you for visiting Woke Up and hopes that you will join our community! <br>
+        Zoe
+</p>
     </div>
   </div>
 </div>
 
-
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Hope This Was A Great Experience!</h1>
+    <h2 class="w3-margin w3-xlarge">Community Guidelines</h2>
+    <p class="w3-xlarge"> Be respectful. Rude, insensitive, or irrelevant comments will be deleted. This is an open space where discussion is encouraged. Enjoy!</p>
 </div>
 
 <!-- Footer -->
@@ -92,7 +94,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>Powered by WOKE UP</p>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">WOKE UP</a></p>
 </footer>
 
 <script>
