--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Topics addressed include cultural appropriation, racism, gender inequality, etc.
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">WOKE UP</a></p>
+ <p>By WOKE UP</p>
 </footer>
 
 <script>
@@ -110,4 +110,3 @@ function myFunction() {
 </script>
 
 </body>
-</html>
