--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display">
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
+
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
 
 <style>
 h1 {font family: "Sedgwick Ave Display", sans-serif}
@@ -22,6 +27,7 @@ body,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Talk</a>
     <a href= "vent.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Vent</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Advice</a>
     <a href="resources.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Resources</a>
   </div>
 
@@ -29,13 +35,14 @@ body,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Talk</a>
     <a href="vent.html" class="w3-bar-item w3-button w3-padding-large">Vent</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Advice</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Resources</a>
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-container w3-indigo w3-center" style= "height:100vh; padding:128px 50px;">
-  <h1 class="w3-margin w3-jumbo">WOKE UP</h1>
+  <h1>WOKE UP.</h1>
 </header>
 
 <!-- First Grid -->
@@ -63,15 +70,29 @@ Topics addressed include cultural appropriation, racism, gender inequality, etc.
       <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
-    <div class="w3-twothird">
-      <h2>Meet the Team!</h2>
-      <h5 class="w3-padding-32">Woke Up is founded by four girls who are passionate about educating their generation about social issues. They hope this platform will benefit their society and help young adults eventually become comfortable discussing and bringing awareness to these topics in public.</h5>
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="WokeUpTeam.JPG" style="width:315px; height: 315px" alt="">
+        </div>
+        <div class="col-8">
+          <h2>Meet the Team!</h2>
 
-      <p class="w3-text-grey">
-        Cameron <br>
-        Claire <br>
-        Elaine hopes that Woke Up will allow an outlet for teenagers to share their opinions and become more aware and accepting of other’s opinions as well. She wants teenagers to have discussions without being afraid of backlash. She thanks you for visiting Woke Up and hopes that you will join our community! <br>
-        Zoe
+          <h5> Woke Up is founded by four girls who are passionate about educating their generation about social issues. They hope this platform will benefit their society and help young adults eventually become comfortable discussing and bringing awareness to these topics in public.</h5>
+
+          <p class="w3-text-grey">
+          Cameron <br>
+          Claire <br>
+          Claire is a rising senior in high school in Manhattan.
+          Elaine hopes that Woke Up will allow an outlet for teenagers to share their opinions and become more aware and accepting of other’s opinions as well. She wants teenagers to have discussions without being afraid of backlash. She thanks you for visiting Woke Up and hopes that you will join our community! <br>
+          Zoe<br>
+          Zoe is a 17 year old, native New Yorker who has a passion for activism,coding, and sports. Zoe hopes that this website provides a safe space for young adults to talk and learn about social issues. She is excited for the future of Woke Up and wants to thank everyone for stopping by!
+        <p>
+        </div>
+      </div>
+  </div>
+
+
 </p>
     </div>
   </div>
@@ -92,7 +113,7 @@ Topics addressed include cultural appropriation, racism, gender inequality, etc.
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>By WOKE UP</p>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">WOKE UP</a></p>
 </footer>
 
 <script>
@@ -108,3 +129,4 @@ function myFunction() {
 </script>
 
 </body>
+</html>
