--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Topics addressed include cultural appropriation, racism, gender inequality, etc.
 
           <p class="w3-text-grey">
           Cameron <br>
+          Cameron is a rising senior in high school in Long Island. Cameron wanted a place where teens could talk about different things like social issues or just a place to talk about different things, but be anonymous. Being anonymous helps the person in many ways. Now that person doesn't have to be scared to say different things, worried about being judged or even known as the person who said what they said. She feels this will help teens get things off their chest and relieve some stress. <br>
           Claire <br>
           Claire is a rising senior in high school in Manhattan.
           Elaine hopes that Woke Up will allow an outlet for teenagers to share their opinions and become more aware and accepting of other’s opinions as well. She wants teenagers to have discussions without being afraid of backlash. She thanks you for visiting Woke Up and hopes that you will join our community! <br>
